<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="keith@todo.todo">keith</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>bumperbot_utils</build_depend>
  <build_depend>litter_destruction</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>pointcloud_to_laserscan</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>  
  <exec_depend>bumperbot_utils</exec_depend>
  <exec_depend>litter_destruction</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

</package>
